// Tiny-LLM Model Schema
// DBML-style definition for model architecture and data structures
// Version: 2.0.1 | Last Updated: 2026-04-17

// =============================================================================
// Core Configuration Models
// =============================================================================

Table model_config {
  vocab_size int [not null, default: 32000, note: "Vocabulary size"]
  hidden_dim int [not null, default: 4096, note: "Hidden dimension (d_model)"]
  num_layers int [not null, default: 32, note: "Number of Transformer layers"]
  num_heads int [not null, default: 32, note: "Number of attention heads"]
  num_kv_heads int [not null, default: 32, note: "Number of KV heads (GQA)"]
  head_dim int [not null, default: 128, note: "Dimension per attention head"]
  intermediate_dim int [not null, default: 11008, note: "FFN intermediate dimension"]
  max_seq_len int [not null, default: 2048, note: "Maximum sequence length"]
  rope_theta float [not null, default: 10000.0, note: "RoPE theta parameter"]
  rms_norm_eps float [not null, default: 1e-5, note: "RMSNorm epsilon"]
  eos_token_id int [not null, default: 2, note: "End-of-sequence token ID"]
  bos_token_id int [not null, default: 1, note: "Beginning-of-sequence token ID"]
}

Table quantization_params {
  group_size int [not null, default: 128, note: "Elements per scale factor"]
  symmetric bool [not null, default: true, note: "Symmetric quantization (no zero point)"]
}

// =============================================================================
// Weight Tensor Models
// =============================================================================

Table quantized_weight {
  id int [pk]
  name varchar [not null, note: "Weight tensor name"]
  rows int [not null, note: "Number of rows (output dimension)"]
  cols int [not null, note: "Number of columns (input dimension)"]
  group_size int [not null, default: 128, note: "Quantization group size"]

  // Derived fields (computed)
  scale_rows int [note: "ceil(rows/group_size)"]
  scale_cols int [note: "Same as cols"]
  weight_bytes bigint [note: "rows * cols * sizeof(int8)"]
  scale_bytes bigint [note: "scale_rows * scale_cols * sizeof(fp16)"]
  total_bytes bigint [note: "weight_bytes + scale_bytes"]
}

Table transformer_weights {
  id int [pk]
  layer_index int [not null, note: "Layer index in model"]

  // Attention weights (all quantized)
  wq_id int [ref: > quantized_weight.id, note: "Query projection [hidden_dim, hidden_dim]"]
  wk_id int [ref: > quantized_weight.id, note: "Key projection [hidden_dim, kv_dim]"]
  wv_id int [ref: > quantized_weight.id, note: "Value projection [hidden_dim, kv_dim]"]
  wo_id int [ref: > quantized_weight.id, note: "Output projection [hidden_dim, hidden_dim]"]

  // FFN weights (SwiGLU, all quantized)
  w1_id int [ref: > quantized_weight.id, note: "Gate projection [hidden_dim, intermediate_dim]"]
  w2_id int [ref: > quantized_weight.id, note: "Down projection [intermediate_dim, hidden_dim]"]
  w3_id int [ref: > quantized_weight.id, note: "Up projection [hidden_dim, intermediate_dim]"]

  // Normalization weights (FP16, not quantized)
  rms_att_weight_dim int [not null, note: "RMS attention weight dimension [hidden_dim]"]
  rms_ffn_weight_dim int [not null, note: "RMS FFN weight dimension [hidden_dim]"]
}

Table model_weights {
  id int [pk]

  // Token embedding (FP16)
  token_embedding_rows int [not null, note: "vocab_size"]
  token_embedding_cols int [not null, note: "hidden_dim"]

  // Output
  final_norm_weight_dim int [not null, note: "hidden_dim"]
  lm_head_id int [ref: > quantized_weight.id, note: "Output projection [hidden_dim, vocab_size]"]
}

// =============================================================================
// Runtime State Models
// =============================================================================

Table kv_cache_config {
  num_layers int [not null, default: 32]
  num_heads int [not null, default: 32]
  head_dim int [not null, default: 128]
  max_seq_len int [not null, default: 2048]
  max_batch_size int [not null, default: 1]
}

Table kv_cache_slot {
  slot_id int [pk]
  seq_len int [not null, default: 0, note: "Current sequence length"]
  is_active bool [not null, default: false, note: "Slot is in use"]

  // Memory layout: [num_layers, 2, max_seq_len, num_heads, head_dim]
  // 2 = K and V tensors
  k_cache_ptr bigint [note: "GPU pointer to K cache"]
  v_cache_ptr bigint [note: "GPU pointer to V cache"]
}

Table generation_config {
  max_new_tokens int [not null, default: 256]
  temperature float [not null, default: 1.0]
  top_k int [not null, default: 50]
  top_p float [not null, default: 0.9]
  do_sample bool [not null, default: false, note: "false = greedy"]
  repetition_penalty float [not null, default: 1.0]
}

Table generation_stats {
  prefill_time_ms float [default: 0.0]
  decode_time_ms float [default: 0.0]
  prompt_tokens int [default: 0]
  tokens_generated int [default: 0]
  tokens_per_second float [default: 0.0]
  peak_memory_bytes bigint [default: 0]
}

// =============================================================================
// Memory Layout Specifications
// =============================================================================

// KV Cache Memory Layout (FP16):
// Shape: [num_layers, 2, max_batch_size, max_seq_len, num_heads, head_dim]
// Total elements: num_layers * 2 * max_batch_size * max_seq_len * num_heads * head_dim
// Total bytes: total_elements * sizeof(half) = total_elements * 2

// Weight Memory Layout:
// - QuantizedWeight: INT8 weights + FP16 scales
// - Weights: [rows, cols] int8
// - Scales: [ceil(rows/group_size), cols] fp16

// Example for Llama-2-7B (hidden_dim=4096, num_layers=32, intermediate_dim=11008):
// Per-layer attention: 4 * 4096 * 4096 = 67M parameters -> 67MB INT8 + 0.5MB scales
// Per-layer FFN: 3 * 4096 * 11008 = 135M parameters -> 135MB INT8 + 1MB scales
// Total per layer: ~202MB INT8 + ~1.5MB scales = ~203.5MB
// Full model (32 layers): ~6.5GB INT8 (vs ~13GB FP16)

// =============================================================================
// GGUF File Format Schema
// =============================================================================

Table gguf_header {
  magic varchar [not null, note: "GGUF magic number"]
  version int [not null, note: "Format version"]
  tensor_count bigint [not null, note: "Number of tensors"]
  metadata_kv_count bigint [not null, note: "Number of metadata key-value pairs"]
}

Table gguf_metadata {
  key varchar [pk, not null]
  value_type varchar [not null, note: "String, Float, Int, Bool, Array, etc."]
  value text [not null, note: "JSON-encoded value"]
}

Table gguf_tensor_info {
  name varchar [pk, not null, note: "Tensor name"]
  n_dims int [not null, note: "Number of dimensions"]
  dims array [not null, note: "Dimension sizes"]
  dtype varchar [not null, note: "Data type (F16, Q8_0, etc.)"]
  offset bigint [not null, note: "Offset in file"]
}

// =============================================================================
// Indexes for Query Optimization
// =============================================================================

// Primary lookup paths:
// 1. Model config -> Model weights -> Transformer weights per layer
// 2. Generation config -> Generation stats
// 3. KV cache config -> KV cache slots by is_active

// Notes:
// - All GPU memory allocations use RAII pattern (DeviceBuffer)
// - Error handling via Result<T> monad (no exceptions for control flow)
// - Thread-safe: single-owner model, concurrent KV cache slot allocation
